--- a/ADR/2023-09.1 - Выбор архитектурной формы системы.md
+++ b/ADR/2023-09.1 - Выбор архитектурной формы системы.md
@@ -1,36 +1,53 @@
+**Дата:** 24 декабря 2025 г.  
+**Статус:** On Review
 
-**Дата:** 20 сентября 2023 г.
+# Контекст
 
-**Статус:** Принято
+Проект «Платформа для Трейдинга» должен обеспечивать:
 
-**Контекст:** 
+- отображение актуальных котировок в режиме реального времени;
+- создание и исполнение торговых ордеров;
+- управление портфелем и историю сделок;
+- аналитические инструменты (графики, индикаторы), уведомления и автоматические стратегии;
+- высокую доступность 24/7, безопасность и возможность масштабирования при росте нагрузки.
 
-При разработке платформы для управления рецептами мы стоим перед выбором архитектурной формы системы. Нам необходимо учесть масштабируемость, надежность, скорость разработки и возможность быстро вносить изменения.
+Система также должна поддерживать интеграции с брокерскими платформами и банками. Требуется выбрать архитектурную форму, которая позволит развивать функциональность по модулям и при этом держать низкие задержки в критичных операциях (создание/исполнение ордеров).
 
-**Рассмотренные варианты:**
+# Рассмотренные варианты
 
-1. **Модульный монолит:** Одно приложение, разделенное на модули, каждый из которых отвечает за определенную функциональность.
-2. **Микросервисы:** Разделение системы на независимые сервисы, которые взаимодействуют между собой посредством API.
-3. **Серверлесс:** Архитектура, при которой разработчикам не требуется управлять серверами, а код выполняется в ответ на события.
+## 1) Модульный монолит
+Единое приложение, разделённое на модули по функциональным зонам (котировки, ордера, портфель, аналитика, пользователи, уведомления).
 
-**Решение:**
+## 2) Микросервисная архитектура
+Функциональные зоны вынесены в отдельные сервисы (Market Data, Order Management, Portfolio, Users/Auth, Notifications, Analytics).
 
-Выбран модульный монолит.
+## 3) Событийно-ориентированные микросервисы (EDA)
+Микросервисы + обмен доменными событиями через брокер сообщений (например, «ОрдерСоздан», «СделкаИсполнена», «ПортфельОбновлён»). Команды обрабатываются синхронно (API), события — асинхронно (шина событий).
 
-**Обоснование:**
+## 4) Serverless архитектура
+Функции выполняются по событиям (создание ордера → триггер), минимальная инфраструктура, упор на managed-сервисы.
 
-- **Простота разработки и развертывания:** Не требуется координация между различными сервисами, что упрощает процесс разработки и развертывания.
-- **Эффективное использование ресурсов:** Все модули работают в одном процессе, что сокращает накладные расходы на сетевое взаимодействие.
-- **Локальное взаимодействие:** Модули могут обмениваться данными без задержек сети.
-- **Гибкость:** Модульный монолит позволяет легко изолировать и масштабировать определенные части приложения при необходимости.
+# Решение
 
-**Недостатки решения:**
+Выбрана **событийно-ориентированная микросервисная архитектура (EDA)**.
 
-- **Потенциальные проблемы с масштабированием:** При росте приложения может потребоваться дополнительные усилия для его масштабирования.
-- **Риски "спагетти-кода":** Необходима строгая дисциплина при разработке, чтобы избежать непересекающихся зависимостей между модулями.
+# Обоснование
 
-**Последствия:**
+- **Низкая задержка в критичных сценариях**: контур ордеров и исполнения можно оптимизировать отдельно от аналитики/форума/уведомлений.
+- **Масштабируемость по «горячим» зонам**: Market Data и Notifications масштабируются независимо.
+- **Устойчивость**: асинхронные доменные события позволяют перераспределять нагрузку и переживать временные сбои интеграций.
+- **Изоляция рисков**: ошибки в некритичных подсистемах (форум/аналитика) меньше влияют на контур торгов.
+- **Эволюционность**: новые функции (стратегии, рекомендации) подключаются подпиской на события без изменения критичного ядра.
 
-- Необходимо строго следить за модульностью и избегать нарушения границ модулей.
-- Следует регулярно рефакторить код, чтобы избежать его усложнения.
+# Недостатки
 
+- Выше сложность инфраструктуры (оркестрация, наблюдаемость, трассировка).
+- Возникает **eventual consistency** между сервисами (нужно проектировать идемпотентность и повторную обработку событий).
+- Сложнее тестирование: контрактные/интеграционные тесты, тестовые стенды.
+
+# Последствия
+
+- Вводится **API Gateway/BFF** для клиентских приложений (Web/Mobile) и маршрутизации запросов.
+- Внутренние взаимодействия: синхронно (HTTP/gRPC) для команд, асинхронно (message broker) для событий.
+- Нужны стандарты: схема событий, версияция, корреляция (trace-id), политика ретраев/дедупликации.
+- Требуется базовый набор observability: централизованные логи, метрики, распределённый трейсинг.
