--- a/ADR/2023-09.2 - Выбор технологии программирования серверной части.md
+++ b/ADR/2023-09.2 - Выбор технологии программирования серверной части.md
@@ -1,35 +1,39 @@
-
-**ADR: 2023-09.2 - Выбор технологии программирования серверной части**
-
-**Дата:** 20 сентября 2023 г.
-
+**Дата:** 24 декабря 2025 г.  
 **Статус:** Принято
 
-**Контекст:** 
+# Контекст
 
-При разработке серверной части нашей платформы для управления рецептами мы стоим перед выбором технологии программирования. Этот выбор будет влиять на скорость разработки, стабильность, производительность, и возможность привлечения квалифицированных разработчиков.
+Серверная часть платформы для трейдинга должна:
 
-**Рассмотренные варианты:**
+- обрабатывать высокочастотные запросы (котировки, стакан, уведомления);
+- надёжно фиксировать торговые операции (создание ордера, исполнение, расчёт позиций);
+- поддерживать WebSocket/streaming для realtime;
+- обеспечивать безопасность (аутентификация, авторизация, аудит) и высокую доступность;
+- интегрироваться с брокерами/банками и брокером сообщений.
 
-1. **Java:** Опытный, надежный и проверенный временем язык программирования с большим экосистемой и инструментами.
-2. **Kotlin:** Современный язык, который работает на JVM и совместим с Java, предлагая более выразительный синтаксис и улучшенную безопасность типов.
-3. **Go:** Простой и быстрый язык с отличной поддержкой многозадачности.
-4. **Python:** Популярный язык с широкой библиотекой и быстрой разработкой, но может иметь проблемы с производительностью на серверной стороне.
+Требуется выбрать технологию серверной разработки, учитывая производительность, поддержку конкурентности, зрелость экосистемы и удобство деплоя.
 
-**Решение:**
+# Рассмотренные варианты
 
-Выбран Kotlin.
+1. **Java (Spring)** — зрелая экосистема, много инструментов, хороша для крупных систем, но тяжелее по ресурсам.
+2. **Kotlin (Spring)** — современнее Java, но те же инфраструктурные требования JVM.
+3. **Go** — высокая производительность, дешёвая конкурентность (goroutines), простой деплой.
+4. **Node.js (TypeScript)** — быстрый старт, хорош для BFF, но сложнее гарантировать предсказуемую производительность под высокой нагрузкой.
+5. **Rust** — максимальная производительность, но выше порог входа и скорость разработки ниже.
 
-**Обоснование:**
+# Решение
 
-- **Совместимость с Java:** Kotlin полностью совместим с Java, что позволяет нам использовать уже существующие библиотеки и инструменты.
-- **Безопасность:** Kotlin предлагает многие средства для предотвращения ошибок на этапе компиляции, такие как null-safety.
-- **Современный синтаксис:** Kotlin обеспечивает чистый и выразительный синтаксис, что упрощает чтение и написание кода.
-- **Корутины:** Kotlin имеет встроенную поддержку корутин, что делает асинхронное программирование более простым и эффективным.
-- **Широкая поддержка в индустрии:** Большое количество компаний и проектов перешли на Kotlin, что гарантирует активное развитие языка и поддержку сообщества.
+Выбран **Go** как основной язык разработки backend-сервисов.
 
-**Последствия:**
+# Обоснование
 
-- Все серверные компоненты будут разработаны на Kotlin.
-- Необходимо обеспечить обучение команды (если требуется) для эффективной работы с Kotlin.
-- Надо уделять внимание поиску и применению оптимальных практик и инструментов, специфичных для Kotlin.
+- **Производительность и низкие задержки** — важны для API ордеров и realtime-потоков.
+- **Лёгкая конкурентность** (goroutines) — удобно для обработки множества соединений (WebSocket), фоновых воркеров и ретраев.
+- **Простота развёртывания** — один бинарник, минимальные зависимости, удобен для контейнеризации.
+- **Зрелая экосистема** для сетевого программирования и интеграций (HTTP/gRPC, драйверы БД, клиенты брокеров сообщений).
+
+# Последствия
+
+- Основные сервисы пишутся на Go (например, Order Management, Portfolio, Market Data Gateway).
+- Для HTTP API используется **gin/echo**, для межсервисного взаимодействия предпочтительно **gRPC**.
+- Требуется единый стиль логирования/трейсинга и стандарт для ошибок (error codes).
