--- a/ADR/2023-09.3 - Выбор технологии программирования клиентского приложения.md
+++ b/ADR/2023-09.3 - Выбор технологии программирования клиентского приложения.md
@@ -1,34 +1,53 @@
-
-**Дата:** 20 сентября 2023 г.
-
+**Дата:** 24 декабря 2025 г.  
 **Статус:** Принято
 
-**Контекст:** 
+# Контекст
 
-Для создания клиентского приложения платформы управления рецептами нам необходимо выбрать соответствующий фреймворк или библиотеку. От этого выбора зависит пользовательский опыт, скорость загрузки приложения, а также производительность и возможности разработки.
+Для проекта «Платформа для Трейдинга» требуется клиентское приложение (Web), которое обеспечивает:
 
-**Рассмотренные варианты:**
+- просмотр рыночных данных в реальном времени (котировки, стакан, лента сделок);
+- выставление/отмена/изменение ордеров, просмотр статусов исполнения;
+- управление портфелем, позициями и историей сделок;
+- графики и базовая аналитика (индикаторы, фильтры, отчёты);
+- уведомления (в т.ч. realtime) и безопасный вход (аутентификация/авторизация).
 
-1. **ReactJS:** Популярная и быстро развивающаяся JavaScript-библиотека для создания пользовательских интерфейсов.
-2. **Vue.js:** Прогрессивный JavaScript-фреймворк с легким входом и гибкостью.
-3. **Angular:** Полноценный фреймворк с широкими возможностями, но с более крутым порогом входа.
-4. **Svelte:** Новый и набирающий популярность фреймворк, который отличается своей производительностью.
+Нефункциональные требования: высокая отзывчивость UI, стабильная работа при большом количестве обновлений данных, поддержка современных браузеров, удобство масштабирования команды и расширения функциональности.
 
-**Решение:**
+# Рассмотренные варианты
 
-Выбран ReactJS.
+1. **React + TypeScript (SPA)**
+2. **Vue.js**
+3. **Angular**
+4. **Svelte**
+5. **Flutter Web** (единый стек с потенциальной мобильной версией)
 
-**Обоснование:**
+# Решение
 
-- **Мощное сообщество:** Огромное сообщество разработчиков и множество доступных ресурсов обучения и поддержки.
-- **Компонентный подход:** Позволяет создавать переиспользуемые компоненты, что ускоряет процесс разработки и обеспечивает стабильность приложения.
-- **Гибкость:** React предоставляет гибкость в выборе инструментов и архитектурных решений.
-- **Производительность:** Виртуальный DOM обеспечивает быструю перерисовку интерфейса.
-- **Совместимость:** React может интегрироваться с различными бэкенд-технологиями и API.
+Выбрана технология **React + TypeScript** для клиентского Web-приложения.
 
-**Последствия:**
+# Обоснование
 
-- Все клиентские приложения будут разработаны с использованием ReactJS.
-- Необходимо провести обучение или усилить текущие знания команды в области React и связанных с ним инструментов.
-- Следует активно использовать экосистему React (например, Redux, React Router) для оптимизации разработки и обеспечения лучшего пользовательского опыта.
+- **Большая и зрелая экосистема**: маршрутизация, управление состоянием, работа с WebSocket/стримингом, инструменты сборки и тестирования.
+- **Компонентный подход** упрощает повторное использование UI-элементов (виджеты котировок, таблицы ордеров, карточки позиций, модальные формы).
+- **Удобство для realtime-интерфейса**: React хорошо подходит для построения сложных динамических интерфейсов при правильной архитектуре состояния и мемоизации.
+- **TypeScript снижает количество ошибок** в доменной логике (ордера/позиции/статусы) и повышает поддерживаемость кода.
+- **Совместимость с выбранными практиками тестирования**: unit-тесты (Jest/RTL), E2E (Playwright) и CI-пайплайны.
+
+# Недостатки
+
+- Необходимо дисциплинированно проектировать состояние (иначе возможны «лишние» перерисовки).
+- Потребуются соглашения по архитектуре фронтенда (структура модулей, стандарты компонентов, слои работы с API/событиями).
+
+# Последствия
+
+- Клиентское приложение реализуется на **React + TypeScript**.
+- Рекомендуемый базовый стек (может уточняться по ходу проекта):
+  - сборка: **Vite** (или Next.js при необходимости SSR/SEO);
+  - маршрутизация: **React Router**;
+  - состояние: **Redux Toolkit**;
+  - запросы/кэш: **React Query**;
+  - realtime: WebSocket-клиент + слой событий/буферизации;
+  - UI-компоненты: MUI/AntD или собственный дизайн-кит;
+  - графики: библиотека графиков Recharts.
+- Вводятся правила качества: линтинг, форматирование, code review, обязательные тесты в CI.
 
