--- a/ADR/2023-09.4 - Выбор системы хранения данных.md
+++ b/ADR/2023-09.4 - Выбор системы хранения данных.md
@@ -1,34 +1,44 @@
-
-**Дата:** 20 сентября 2023 г.
-
+**Дата:** 24 декабря 2025 г.  
 **Статус:** Принято
 
-**Контекст:**
+# Контекст
 
-Нам нужна надежная и масштабируемая база данных для нашего проекта управления рецептами. Выбор базы данных может влиять на производительность, масштабируемость и безопасность нашего решения.
+Платформа для трейдинга хранит:
 
-**Рассмотренные варианты:**
+- пользователей и роли;
+- ордера, сделки, позиции и портфели (критичные транзакционные данные);
+- историю операций и отчёты;
+- кэш котировок/потоковые данные для realtime-интерфейса.
 
-1. **PostgreSQL:** Объектно-реляционная система управления базами данных.
-2. **MySQL:** Популярная реляционная система управления базами данных.
-3. **MongoDB:** Документоориентированная система управления базами данных.
-4. **Cassandra:** Распределенная система управления базами данных.
+Нужны: ACID-гарантии для ордеров и сделок, поддержка сложных запросов (отчётность, фильтры по истории), удобное масштабирование чтения и резервное копирование.
 
-**Решение:**
+# Рассмотренные варианты
 
-Выбран PostgreSQL.
+1. **PostgreSQL** — надёжная объектно-реляционная СУБД с сильными транзакциями, богатым SQL и расширениями.
+2. **MySQL** — популярная реляционная СУБД, хороша для многих сценариев, но меньше возможностей расширения под сложные запросы.
+3. **MongoDB** — удобна для документов, но хуже подходит как единственный источник истины для финансовых транзакций.
+4. **CockroachDB** — распределённая SQL-СУБД с транзакциями, но выше операционная сложность.
+5. **Полиглотное хранение** (SQL + отдельная time-series/OLAP БД) — лучше по специализированным задачам, но сложнее в эксплуатации.
 
-**Обоснование:**
+# Решение
 
-- **Надежность:** PostgreSQL известен своей стабильностью и надежностью, даже при работе с большими объемами данных.
-- **Расширяемость:** PostgreSQL поддерживает расширения, что позволяет добавлять новые возможности по мере необходимости.
-- **Оптимизация запросов:** Отличный планировщик запросов, который оптимизирует сложные запросы.
-- **JSON поддержка:** Встроенная поддержка JSON позволяет работать с неструктурированными данными.
-- **Сообщество:** Большое и активное сообщество, множество доступных материалов и ресурсов для обучения.
-  
-**Последствия:**
+Выбран **PostgreSQL** как основная транзакционная база данных.  
+Дополнительно используется **Redis** как кэш/хранилище сессий и краткоживущих realtime-данных.
 
-- Все данные проекта будут храниться в PostgreSQL.
-- Необходимо убедиться в компетентности команды в работе с PostgreSQL или предоставить соответствующее обучение.
-- Рекомендуется регулярное создание резервных копий для предотвращения потери данных.
+# Обоснование
 
+- **ACID и надёжность** — критично для ордеров/сделок/портфелей.
+- **Богатый SQL** — удобно для отчётности, аналитических выборок по истории сделок и портфеля.
+- **Расширяемость** — возможности партиционирования, индексации, JSONB, расширения под time-series (при необходимости).
+- **Экосистема и инструменты** — бэкапы, репликация, мониторинг, миграции.
+
+# Недостатки
+
+- Для очень высокочастотных потоков котировок может потребоваться отдельное специализированное хранилище (time-series/OLAP).
+- Требует дисциплины в проектировании схемы (индексы, партиции, миграции).
+
+# Последствия
+
+- Финансовые операции фиксируются в PostgreSQL как «источнике истины».
+- Redis применяется для ускорения чтения (котировки, агрегаты, rate-limit, сессии).
+- Для роста нагрузки планируется: репликация чтения, партиционирование таблиц истории, выделение хранилища market-data при необходимости.
