--- a/1. Исходные сведения/Архитектурные факторы.md
+++ b/1. Исходные сведения/Архитектурные факторы.md
@@ -74,7 +74,7 @@
 * **Брокеры:** поток подтверждений сделок/статусов, отчётность.
 * **Админы:** редкие операции, но тяжёлые запросы по аудиту/мониторингу.
 
-#### Рост пользователей (примерные оценки — поправишь под свой курс/вуз):
+#### Рост пользователей:
 
 **SCA01:** На запуске — 500–1 500 активных пользователей.
 
